fixing home page font spacing

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -19,12 +19,14 @@ p {
 }
 
 .home-blurb {
-    width: 800px;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     letter-spacing: 2px;
-    text-align: center;
-    font-size: 20px;
+    font-size: 1em;
+}
+
+.y {
+    padding-left: 7%;
 }
 
 .home-title {
@@ -32,12 +34,11 @@ p {
 }
 
 .main-view {
-    height: 780px;
-
+    margin-top: -4em;
 }
 
 .dry {
-    font-size: 5em;
+    font-size: 3.8em;
 }
 
 a, .highlight, .navbar-custom .nav li.active a:hover {
